# vnpyrs

./: Cargo.toml  LICENSE  README.md  pyproject.toml
examples/: backtest.py  gui.py
src/: gui.rs  lib.rs  template.rs
src/backtesting/: base.rs  mod.rs
src/trader/: constant.rs  database.rs  database_impl.rs  mod.rs  object.rs  setting.rs  utility.rs
vnpyrs/: __init__.py  base_widget.py  engine.py  optimize.py  utility.py  widget.py
