[package]
name = "vnpyrs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vnpyrs"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.39"
log = "0.4.22"
pyo3 = { version= "0.23.1", features = ["extension-module", "chrono", "auto-initialize", "abi3-py37"] }
rust_decimal = "1.36.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["sqlite", "mysql", "runtime-tokio", "chrono"] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = "1.42.0"

