[package]
name = "vnpyrs"
version = "0.2.0"
edition = "2021"
description = "vnpy backtest module written in Rust and Python"
repository = "https://github.com/vnpyrs/vnpyrs"
license = "MIT"
homepage = "https://github.com/vnpyrs/vnpyrs"
authors = ["Liehan Wu <vnpyrs@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vnpyrs"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.39"
chrono-tz = "0.10.0"
log = "0.4.22"
bson = { version="2.13.0", features = ["chrono-0_4"]}
mongodb = { version="3.1.1", features = [] }
pyo3 = { version= "0.23.1", features = ["extension-module", "chrono", "auto-initialize"] }
rust_decimal = "1.36.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["sqlite", "mysql", "postgres", "runtime-tokio", "chrono"] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = "1.42.0"

